<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="18dp"
    android:gravity="center"
    android:background="@color/cardBackColor">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="16dp"
        android:textStyle="bold"
        tools:text="@string/messages_item_delete_chat_title" />


    <TextView
        android:id="@+id/tv_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:textColor="#888888"
        android:textSize="14dp"
        android:textStyle="normal"
        tools:text="@string/messages_item_delete_chat_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingHorizontal="24dp"
            android:layout_marginEnd="10dp"
            android:paddingVertical="9dp"
            android:background="@drawable/bg_corner_stroke_16dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16dp"
            android:text="@string/dialog_button_cancel" />

        <TextView
            android:id="@+id/btn_primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:paddingHorizontal="24dp"
            android:paddingVertical="9dp"
            android:textSize="16dp"
            android:background="@drawable/bg_corner_solid_16dp"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="确定" />


    </LinearLayout>

</LinearLayout>

